add train model

--- a/iris_api/Makefile
+++ b/iris_api/Makefile
@@ -3,3 +3,9 @@ docker-build:
 
 docker-run: docker-build
 	docker run -p 8000:80 iris-api
+
+fastapp-run:
+	uv run fastapi dev main.py
+
+train-model:
+	uv run python train.py
