--- a/iris_api/pyproject.toml
+++ b/iris_api/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi[standard]>=0.115.11",
+    "loguru>=0.7.3",
     "pytest>=8.3.5",
+    "scikit-learn>=1.6.1",
+    "xgboost>=2.1.4",
 ]
