add docs for iris api and log to load model api

--- a/iris_api/Makefile
+++ b/iris_api/Makefile
@@ -1,14 +1,17 @@
+install: 
+	uv sync
+
+train-model:
+	uv run python model_train.py
+
+local-run:
+	uv run fastapi dev main.py
+
+unit-test-run:
+	uv run pytest test.py
+
 docker-build:
 	docker build -f Dockerfile -t iris-api .
 
 docker-run: docker-build
 	docker run -p 8000:80 iris-api
-
-fastapp-run:
-	uv run fastapi dev main.py
-
-train-model:
-	uv run python train.py
-
-unit-test-run:
-	uv run pytest test.py
